добавление валидации, исправление метода для парсинга